--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Why hello there</h1>
-<p>This is just the beginning.</p>
+<p>This is just the beginning of what is to come.</p>
 </body>
 </html>
