--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Why hello there</h1>
-<p>This is just the beginning of what is to come.</p>
+<h1>Hola</h1>
+<p>Discord server can be found [here](https://discord.gg/CvJZFxcPkg)</p>
 </body>
 </html>
