--- a/guides/random.html
+++ b/guides/random.html
@@ -1,7 +1,7 @@
 <h2>Made using [Inline CSS]</h2>
 
 
-<p style="font-family: Comic Sans">This is dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text.
+<p style="font-family: Arial">This is dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text.
 
 
 </p>
