--- a/guides/random.html
+++ b/guides/random.html
@@ -1,4 +1,4 @@
-<h2>Made using [Inline CSS]</h2>
+<p style="font-family: Arial"><h2>Made using [Inline CSS]</h2>
 
 
 <p style="font-family: Arial">This is dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text. This is more dummy text.
@@ -10,7 +10,7 @@
 <h3>The Explanation</h3>
 
 
-<p>Since I’m using the CodePen Editor, the default typeface is Times New Roman. That means changing the typeface of a paragraph will require me to use a style attribute that contains the CSS font-family property set to "Comic Sans." The other elements on the page are not targeted by inline CSS and therefore remain Times New Roman.
+<p style="font-family: Arial">Since I’m using the CodePen Editor, the default typeface is Times New Roman. That means changing the typeface of a paragraph will require me to use a style attribute that contains the CSS font-family property set to "Comic Sans." The other elements on the page are not targeted by inline CSS and therefore remain Times New Roman.
 
 
 </p>
