--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hola</h1>
-<p>Discord server can be found [here](https://discord.gg/CvJZFxcPkg)</p>
+<p>Discord server can be found at https://discord.gg/CvJZFxcPkgm</p>
+<p>Guides can be found at https://magolol.github.io/guides<p>
 </body>
 </html>
